--- a/donate-ui/src/index.html
+++ b/donate-ui/src/index.html
@@ -32,6 +32,10 @@
       type="text/css"
       href="//fonts.googleapis.com/css?family=Comfortaa"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
   </head>
 
   <body class="mat-typography">
